--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,10 @@
       "src": "/api/webhook",
       "dest": "/api/webhook.py"
     }
-  ]
+  ],
+  "functions": {
+    "api/webhook.py": {
+      "runtime": "python3.9"
+    }
+  }
 }
