--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
-  "functions": {
-    "api/webhook.py": {
-      "runtime": "python3.9"
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api"
     }
-  }
+  ]
 }
